3.2.0/_sources/gallery/pyplots/pyplot_text.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pyplots_pyplot_text.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_pyplot_text.py:


===========
Pyplot Text
===========


.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    mu, sigma = 100, 15
    x = mu + sigma * np.random.randn(10000)

    # the histogram of the data
    n, bins, patches = plt.hist(x, 50, density=True, facecolor='g', alpha=0.75)


    plt.xlabel('Smarts')
    plt.ylabel('Probability')
    plt.title('Histogram of IQ')
    plt.text(60, .025, r'$\mu=100,\ \sigma=15$')
    plt.xlim(40, 160)
    plt.ylim(0, 0.03)
    plt.grid(True)
    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_pyplot_text_001.png
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.pyplot.hist
    matplotlib.pyplot.xlabel
    matplotlib.pyplot.ylabel
    matplotlib.pyplot.text
    matplotlib.pyplot.grid
    matplotlib.pyplot.show




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function show at 0x7f154d0b88b0>




.. _sphx_glr_download_gallery_pyplots_pyplot_text.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: pyplot_text.py <pyplot_text.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: pyplot_text.ipynb <pyplot_text.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
